Add info on wsgi

--- a/music_inventory.conf
+++ b/music_inventory.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
         ServerName www.danisantoscode.com
         ServerAdmin santos.adaniele@gmail.com
-        WSGIScriptAlias / /var/www/music_inventory/music_inventory.wsgi
+        WSGIScriptAlias / /var/www/music_inventory/music_inventory$
         <Directory /var/www/music_inventory/catalog/>
             Order allow,deny
             Allow from all
